# irescutaway

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/Celer/: README.md
libs/Celer/src/: CMakeLists.txt
libs/Celer/src/Celer/Base/: Base.hpp  CMakeLists.txt  Exception.cpp  Exception.hpp
libs/Celer/src/Celer/Core/Geometry/Math/: BoundingBox3.cpp  BoundingBox3.hpp  CMakeLists.txt  Color.cpp  Color.hpp  EigenSystem.cpp  EigenSystem.hpp  Math.cpp  Math.hpp  Matrix3x3.cpp  Matrix3x3.hpp  Matrix4x4.Graphics.hpp  Matrix4x4.cpp  Matrix4x4.hpp  Matrix4x4.inline.hpp  OrientedBoundingBox3.cpp  OrientedBoundingBox3.hpp  Point2.cpp  Point2.hpp  Point3.cpp  Point3.hpp  Quaternion.cpp  Quaternion.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Vector3.inline.hpp  Vector4.cpp  Vector4.hpp  Vector4.inline.hpp
libs/Celer/src/Celer/Core/Physics/: BoundingBox3.hpp  CMakeLists.txt  OrientedBoundingBox3.cpp  OrientedBoundingBox3.hpp
libs/Celer/src/Celer/OpenGL/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  PixelBuffer.cpp  PixelBuffer.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.hpp
libs/Celer/src/Celer/Scene/: CMakeLists.txt  Camera.hpp  Frustum.cpp  Frustum.hpp  Trackball.cpp  Trackball.hpp
libs/Eigen/3.3.90/share/pkgconfig/: eigen3.pc
libs/Ires/: CMakeLists.txt  Makefile  TODO.txt  ires.sln  iresdoc.tex
libs/Ires/compareIresFiles/: changeOrientation.cpp  compare2files.cpp
libs/Ires/dynamicPropGen/: dynamicPropGen.cpp
libs/Ires/faceProperGen/: faceCornerEdgeGen.cpp
libs/Ires/ires/: ires.cpp  ires.h  ires.vcxproj  ires.vcxproj.filters  kdtreeires.cpp  kdtreeires.h  primitivesires.h  reader.cpp  writer.cpp
libs/Ires/ires/snappy/: snappy-sinksource.cc  snappy.cc
libs/Ires/models/: zmap_ires2.ires
libs/Ires/test/: test.cpp  test.vcxproj
libs/LCG/samples/imgproc/: Makefile  gradientfilter.cpp  gradientfilter.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  meanfilter.cpp  meanfilter.hpp  renderimage.cpp  renderimage.hpp
libs/LCG/samples/imgproc/shaders/: gradHorizontal.frag  meanfilter.frag  meanfilter.vert  renderimage.frag
libs/LCG/samples/phongViewer/: Makefile  mainWindow.cpp  mainWindow.hpp
libs/LCG/samples/rendering/: Makefile  computeShaderTest.cpp  computeShaderTest.hpp  mainWindow.cpp  mainWindow.hpp  rayCasting.cpp  rayCasting.hpp  ssao.cpp  ssao.hpp  toon.cpp  toon.hpp  volume.cpp  volume.hpp
libs/LCG/samples/rendering/shaders/: blurShader.frag  blurShader.vert  computeShaderTest.comp  deferredShader.frag  deferredShader.vert  normalsShader.frag  normalsShader.vert  phongShader.frag  ssaoShader.frag  ssaoShader.vert  thirdPassShader.frag  thirdPassShader.vert
libs/LCG/samples/rendering/shaders/raycasting/: rayCasting.comp
libs/LCG/samples/volumeRendering/: Makefile  RayCastingEquations.txt  main.cpp  mainWindow.cpp  mainWindow.hpp  rayCasting.cpp  rayCasting.hpp  volume.cpp  volume.hpp
libs/LCG/samples/volumerendering/shaders/: shaderProgram.frag  shaderProgram.vert
libs/LCG/shaderlib/: effect.hpp  framebuffer.cpp  framebuffer.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  textureManager.cpp  textureManager.hpp  trackball.cpp  trackball.hpp
libs/Tucano/: CMakeLists.txt  Effect.hpp  MeanFilter.hpp  Mesh.hpp  Model.hpp  Trackball.hpp
libs/Tucano/utils/: ppmimporter.hpp
libs/tucano/: Doxyfile
libs/tucano/src/: camera.hpp  framebuffer.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp
libs/tucano/src/shapes/: arrow.hpp
libs/tucano/src/utils/: flycamera.hpp  freecamera.hpp  path.hpp  ppmimporter.hpp  qtflycamerawidget.hpp  qtfreecamerawidget.hpp  trackball.hpp
src/IRESCutaway/: CMakeLists.txt
src/IRESCutaway/App/: main.cpp
src/IRESCutaway/GUI/Qt/AboutWidget/: AboutWidgetIRESReader.cpp  AboutWidgetIRESReader.hpp  AboutWidgetIRESReader.ui
src/IRESCutaway/GUI/Qt/GLWidget/: Cube.cpp  Cube.hpp  GLAnimation.cpp  GLWidget.cpp  GLWidget.hpp  ShaderPath.h.cmake
src/IRESCutaway/GUI/Qt/MainWindow/: MainWindow.cpp  MainWindow.hpp
src/IRESCutaway/GUI/Qt/RCC/: Resources.qrc
src/IRESCutaway/GUI/Qt/RCC/Old Stuffs/: BurnsCutaway430.frag  Charles.geom  Cube_in_Geometry_Shader.frag  Cube_in_Geometry_Shader.geom  JFAStep.frag  JFAStep.vert  OrientedBoxApproach.geom
src/IRESCutaway/GUI/Qt/RCC/Shaders/: BackGround.frag  BackGround.vert  BorderLines.frag  BorderLines.geom  BorderLines.vert  BoundingBoxApproach.frag  BoundingBoxApproach.geom  BoundingBoxApproach.vert  BoundingBoxApproachDebug.frag  BoundingBoxCutaway.frag  BoundingBoxCutaway.geom  BoundingBoxCutaway.vert  BurnsCutaway430Wireframe.frag  BurnsCutaway430Wireframe.vert  BurnsJFAInitializing430.frag  BurnsJFAInitializing430.vert  BurnsJFAStep430.frag  BurnsPrimary430.vert  BurnsPrimaryBoundingBox.frag  BurnsPrimaryBoundingBox.geom  BurnsPrimaryBoundingBox.vert  BurnsPrimarySetup.vert  Charles.vert  Cube_Interleaved.frag  Cube_Interleaved.geom  Cube_Interleaved.vert  Cube_in_Geometry_Shader.frag  Cube_in_Geometry_Shader.geom  Cube_in_Geometry_Shader.vert  DebugNormal.frag  DebugNormal.geom  DebugNormal.vert  HongKongCutaway.frag  HongKongCutaway.geom  HongKongCutaway.vert  OrientedBoxApproach.frag  Primary.frag  Primary.geom  Primary.vert  RawCuboid.frag  (+24 more)
src/IRESCutaway/GUI/Qt/RCC/Shaders/Demo/: BurnsPrimary430.frag  BurnsPrimary430.vert  BurnsPrimaryBoundingBox.vert  BurnsPrimarySetup.geom  BurnsPrimarySetup.vert  BurnsPrimaryStatic.frag  BurnsPrimaryStatic.geom  BurnsPrimaryStatic.vert  BurnsSecondary.frag  BurnsSecondary.geom  BurnsSecondary.vert  DummyQuad.frag  DummyQuad.geom  DummyQuad.vert
src/IRESCutaway/GUI/Qt/RCC/Shaders/Dynamic/: IRESCutawayDynamic.frag  IRESCutawayDynamic.vert  IRESCutawayDynamicCrust.frag  IRESCutawayDynamicCrust.vert  IRESCutawayDynamicShell.frag  (+7 more)
src/IRESCutaway/GUI/Qt/UI/: IRESCutaway.ui
src/IRESCutaway/IO/: IRESReader.doxyfile
src/IRESCutaway/IRES/: Block.cpp  Block.hpp  BoundingBox.cpp  BoundingBox.hpp  CornerPointGrid.cpp  CornerPointGrid.hpp  Well.cpp  Well.hpp
src/IRESCutaway/Loaders/Ply/: PlyLoader.cpp  PlyLoader.hpp
(+126 files in other folders)
